Updating source from images

--- a/istio-k8s/techleadsapi/deployment-v1.yaml
+++ b/istio-k8s/techleadsapi/deployment-v1.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: techleadsapi
-        image: techleadsapi:version1
+        image: emiteze/techleadsapi:version1
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
