--- a/istio-k8s/techleadsapi/deployment-v2.yaml
+++ b/istio-k8s/techleadsapi/deployment-v2.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: techleadsapi
-        image: techleadsapi:version2
+        image: emiteze/techleadsapi:version2
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
